--- a/Interfaz/Administrador/src/views/index.hbs
+++ b/Interfaz/Administrador/src/views/index.hbs
@@ -1,5 +1,4 @@
 
-
 <main style="position: relative; overflow: hidden; width: 100%; max-width: 1600px; margin: auto; min-height: 100vh;">
     <img src="/img/Vector3.png" alt="" 
         style="position: absolute; width: 1616px; height: 1148px; top: -800px; right: -200px; z-index: -1;"
@@ -69,17 +68,16 @@
     <div class="col-4">
         <label for="confirm_password"> Foto:</label>
               <!-- Button trigger modal  -->
-              <a class="waves-effect waves-light text-dark btn p-2 text-center" data-bs-toggle="modal" data-bs-target="#staticBackdrop"
+              <a class="waves-effect waves-light text-dark btn p-2 text-center"  href="/facial"
                    style="border-radius: 30px;" 
                 >
                 <i class="material-icons small rounded-circle " style="font-size:90px;"> 📷 
                 </i> 
                 <!-- photo_camera -->                     
-              </a>
+              </a> 
+
     </div>
     
-
-
             <!-- Modal -->
             
             <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
@@ -91,16 +89,24 @@
                   </div>
                      <div class="modal-body">
                         <div class="container">
+                          
+                            
                             <div class="row">
                             <div class="col ">
+                              <!--
                                 <br>
                                 <div id="my_camera"></div>
                                 <input type=button value="Take Snapshot" onClick="take_snapshot()">  
                                 <div id="results" ></div>
-                                <!-- Webcam.min.js -->
-                                <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/webcamjs/1.0.25/webcam.min.js"></script>
+                                -->
+                                <!-- Webcam.min.js 
                                 
-                                <!-- Configure a few settings and attach camera  -->
+                                <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/webcamjs/1.0.25/webcam.min.js"></script>-->
+                                
+                                <!-- Configure a few settings and attach camera -->
+                               <!--  <script type="text/javascript" src="/biometricos/webcam.js"></script>
+                                <script type="text/javascript" src="/biometricos/webcam.min.js"></script> -->
+                                <!--
                                 <script language="JavaScript">
                                     Webcam.set({
                                         width: 320,
@@ -109,8 +115,9 @@
                                         jpeg_quality: 90
                                     });
                                     Webcam.attach( '#my_camera' );
+                                    -->
                                 <!-- Code to handle taking the snapshot and displaying it locally -->
-                                
+                                <!--
                                 function take_snapshot() {
                                     // take snapshot and get image data
                                     Webcam.snap( function(data_uri) {
@@ -128,8 +135,8 @@
 
                                 
                                 </script>
+                                -->
                                 
-                                                  
                                 <div class="d-flex justify-content-center">
                                 <button type="button" class="btn btn-primary" onclick="window.location.href = '/tomarFoto'">Capturar</button>
                                 </div>
@@ -137,6 +144,8 @@
                             </div>
                             
                             </div>
+                             
+                             
                         </div>
                      </div>
 
@@ -152,7 +161,7 @@
            
             <div class="col-4">
               <label for="confirm_password">Huella:</label>
-              <a class="waves-effect waves-light text-dark btn p-2 text-center" data-bs-toggle="modal" data-bs-target="#staticBackdrop2"
+              <a class="waves-effect waves-light text-dark btn p-2 text-center" href="/huella" 
                    style="border-radius: 30px;" 
                 >
                 <i class="material-icons small rounded-circle " style="font-size:100px;">fingerprint
@@ -191,7 +200,7 @@
 
             <div class="col-4">
               <label for="confirm_password">Voz:</label>
-              <a class="waves-effect waves-light text-dark btn p-2 text-center" data-bs-toggle="modal" data-bs-target="#staticBackdrop3"
+              <a class="waves-effect waves-light text-dark btn p-2 text-center" href="/voz" 
                    style="border-radius: 30px;" 
                 >
                 <i class="material-icons small rounded-circle " style="font-size:100px;">mic
@@ -213,7 +222,7 @@
                                 
                                   Aqui se hace la captura de voz
                                   <br>
-
+<!--
                                     <div>
                                         <select name="listaDeDispositivos" id="listaDeDispositivos"></select>
                                         <br><br>
@@ -224,14 +233,21 @@
                                             🎙️ Comenzar ▶️</button>
                                         <button id="btnDetenerGrabacion"> ⏸️ Detener</button>
                                     </div>
-                                    <script src="webcamjs/voz.js"></script>
+                                    <script type="text/javascript" src="webcamjs/voz.js"></script>
                                     <br>
                                     <br>
+                                    -->
                                     <!--
                                     <script type="text/javascript" src="C:/Users/yobis/Desktop/Proyectos/pt/SistemaBiometricoPT/Interfaz/Administrador/src/views/voz.js"></script>
                                     <script type="text/javascript" src="C:/Users/yobis/Desktop/Proyectos/pt/SistemaBiometricoPT/Interfaz/Administrador/src/views/administradores/tomar_voz.js"></script>
-                                   -->
                                   
+                                   <center>
+                                    <h1>Audio Clip Recorder</h1>
+                                    <p><button id="record">Record</button></p>
+                                    <div id="sound-clip"></div>
+                                  </center>
+                                  
+                                  <script type="text/javascript" src="voiceMemo.js"></script>  -->
                                 <div class="d-flex justify-content-center">
                                     <button type="button" class="btn btn-primary" onclick="window.location.href = '/tomarVoz'">Capturar Voz</button>
                                     <button type="button" class="btn btn-primary" onclick="window.location.href = '/tomarFoto'">Capturar</button>
@@ -246,7 +262,13 @@
                 </div>
               </div>
             </div>  
-
+<center>
+                                    <h1>Audio Clip Recorder</h1>
+                                    <p><button id="record">Record</button></p>
+                                    <div id="sound-clip"></div>
+                                  </center>
+                                  
+                                  <script type="text/javascript" src="/biometricos/voiceMemo.js"></script>
     <img src="/img/ellipse1.png" alt="" 
         style="position: absolute; width: 1616px; height: 1148px; left: 100px; bottom: -900px; z-index: -1;"
     >
