--- a/Interfaz/Administrador/src/views/layouts/main.hbs
+++ b/Interfaz/Administrador/src/views/layouts/main.hbs
@@ -66,18 +66,19 @@
         </footer>
      
      </div>
-    <!-- Agrega el formulario oculto -->
-    <form id="photoForm" action="/guardarFoto" method="POST">
-        <input type="hidden" id="photoData" name="rostro" value="">
-    </form>
-     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Broadway/0.1.0/stream.js"></script>
-
    
-     <script type="text/javascript" src="C:/Users/yobis/Desktop/Proyectos/pt/SistemaBiometricoPT/Interfaz/Administrador/src/views/voz.js"></script>
-     <script type="text/javascript" src="C:/Users/yobis/Desktop/Proyectos/pt/SistemaBiometricoPT/Interfaz/Administrador/src/views/administradores/tomar_voz.js"></script>
-                                   
+     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Broadway/0.1.0/stream.js"></script>
+     <script
+                      src="https://code.jquery.com/jquery-3.3.1.min.js"
+                      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+                      crossorigin="anonymous"></script>
+     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
+
+                       
      <!-- webcam 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/webcamjs/1.0.26/webcam.min.js"></script>-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/webcamjs/1.0.26/webcam.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/webcamjs/1.0.25/webcam.min.js"></script>-->
      
      <!-- FOOTER 
     <%- include('partials/Footer') %>-->
