--- a/Interfaz/Administrador/src/views/visitantes/new-visitante.hbs
+++ b/Interfaz/Administrador/src/views/visitantes/new-visitante.hbs
@@ -138,24 +138,48 @@
                                 
                                   Aqui se hace la captura de imágenes del rostro
                                   <br>
-                                <div class="input-group" >
+                               <div class="input-group" >
                                     <input type="file" name="rostro" class="form-control" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04" aria-label="Upload"
                                       style="background: rgb(141, 185, 232);"
                                       > 
-                                </div>
+                                </div> 
+                                <div class="col ">
+                                <br>
+                                <div id="my_camera"></div>
+                                <input type=button value="Take Snapshot" onClick="take_snapshot()">  
+                                <div id="results" >HOLA</div>
 
-                                  <!--div class="card">
-                                      <div class="card-header text-center">
-                                          <h5>Aqui se hace la captura de imágenes del rostro</h5>
-                                      </div>
-                                      <div class="card-body">
-                                        <div class="input-group" >
-                                          <input type="file" name="myImage" class="form-control" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04" aria-label="Upload"
-                                          style="background: rgb(141, 185, 232);"
-                                           > 
-                                        </div>
-                                      </div>
-                                  </div-->
+                                <input type="text" id="demo" name="demo" demo="textValue" />
+
+                                <!-- Webcam.min.js -->
+                                <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/webcamjs/1.0.25/webcam.min.js"></script>
+                                <!-- Configure a few settings and attach camera  -->
+                                <script language="JavaScript">
+                                    Webcam.set({
+                                        width: 320,
+                                        height: 240,
+                                        image_format: 'jpeg',
+                                        jpeg_quality: 90
+                                    });
+                                    Webcam.attach( '#my_camera' );
+                                <!-- Code to handle taking the snapshot and displaying it locally -->
+                                
+                                function take_snapshot() {
+                                    // take snapshot and get image data
+                                    Webcam.snap( function(data_uri) {
+                                        // display results in page
+                                        document.getElementById('results').innerHTML = 
+                                       '<img src="'+data_uri+'"/>';
+                                       
+                                       document.getElementById('demo').value =document.getElementById('results').innerHTML ;
+                                      /*
+                                      document.getElementById('demo').value = 
+                                                                              '<img src="'+data_uri+'"/>';*/
+                                        
+                                    } );                                        
+                                } 
+                                </script>
+                                </div>
                               </div>
                           </div>
                         </div>
@@ -175,15 +199,58 @@
                 </i>
               </a>
             </div>
+             
             <div class="col-4">
               <label for="confirm_password">Voz:</label>
-              <a class="waves-effect waves-light text-dark btn p-2 text-center" style="" 
-                   href="#" style="border-radius: 30px;"
+              <a class="waves-effect waves-light text-dark btn p-2 text-center"  data-bs-toggle="modal" data-bs-target="#staticBackdrop3" style="border-radius: 30px;"
                 >
                 <i class="material-icons small rounded-circle " style="font-size:100px;">mic
                 </i>
+                
+                                   
               </a>
+            </div> 
+            <!-- Modal -->
+            <div class="modal fade" id="staticBackdrop3" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+              <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                <div class="modal-content text-dark">
+                  <div class="modal-header bg-success" style="--bs-bg-opacity: .5;">
+                    <h1 class="modal-title" id="staticBackdropLabel">Captura la voz</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                       <div class="container">
+                          <div class="row">
+                              <div class="col ">
+                                
+                                  Aqui se hace la captura de voz
+                                  <br>
+                              
+                                <h1>Audio Clip Recorder</h1>
+                                <p><button id="record">Record</button></p>
+                                <div id="sound-clip"></div>
+                              
+                                <script src="/biometricos/voiceMemo.js"></script>
+
+                                  
+                              </div>
+                          </div>
+                        </div>
+                  </div>
+
+
+
+                  
+                  <div class="modal-footer bg-success" style="--bs-bg-opacity: .5;">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Aceptar</button>
+                  </div>
+
+                </div>
+              </div>
             </div>    
+          
+
+
           </div>
         <button class="btn btn-success w-100" type="submit">
           Guardar
