--- a/Interfaz/Administrador/src/public/css/main.css
+++ b/Interfaz/Administrador/src/public/css/main.css
@@ -42,13 +42,13 @@ header img {
   min-height: 100vh;
   flex-direction: column;
 }
-/*
+
 #my_camera{
   width: 320px;
   height: 240px;
-  border: 1px solid black;
+/*  border: 1px solid black;*/
 }
-*/
+
 
 main {
   flex: 1 0 auto;
