--- a/Interfaz/Administrador/src/views/administradores/principal.hbs
+++ b/Interfaz/Administrador/src/views/administradores/principal.hbs
@@ -74,7 +74,7 @@
                 <div class=" MenuActionContainer text-center  bg-warning p-2" style="--bs-bg-opacity: .5;">
                     <i class="material-icons text-white medium  bg-warning p-2 rounded-circle">engineering</i>
                     <h5 class="text-black" style="font-family: 'Franklin Gothic Medium'" >
-                        <b>Trabajadores</b>
+                        Trabajadores
                     </h5>
                     <p class="textHeight">Aquí puedes ver la información de todos los trabajadores.</p>
                     <a class="waves-effect waves-light text-white btn bg-warning p-2 text-center  " 
