--- a/Interfaz/Administrador/src/views/inquilinos/new-inquilino.hbs
+++ b/Interfaz/Administrador/src/views/inquilinos/new-inquilino.hbs
@@ -115,14 +115,13 @@
             <div class="row text-center">
              <div class="col-4">
               <label for="confirm_password"> Foto:</label>
-              <!-- Button trigger modal  -->
-              <a class="waves-effect waves-light text-dark btn p-2 text-center" data-bs-toggle="modal" data-bs-target="#staticBackdrop"
+             <a class="waves-effect waves-light text-dark btn p-2 text-center"  href="/facial"
                    style="border-radius: 30px;" 
                 >
                 <i class="material-icons small rounded-circle " style="font-size:90px;"> 📷 
                 </i> 
                 <!-- photo_camera -->                     
-              </a>
+              </a> 
             </div>
 
             <!-- Modal -->
